--- a/OrangeSpeedReader/AndroidManifest.xml
+++ b/OrangeSpeedReader/AndroidManifest.xml
@@ -22,6 +22,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.example.orangespeedreader.WordPlayerActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_word_player"
+            android:parentActivityName="com.example.orangespeedreader.MainActivity"
+            android:theme="@style/FullscreenTheme" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.orangespeedreader.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
